# serializer version: 1
# name: test_number_entities[number.eisy_local_variables_boost_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 2147483648.0,
      'min': -2147483648.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.eisy_local_variables_boost_mode',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Boost Mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Boost Mode',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_1.10',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[number.eisy_local_variables_boost_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'eisy.local Variables Boost Mode',
      'last_edited': None,
      'max': 2147483648.0,
      'min': -2147483648.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.eisy_local_variables_boost_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_number_entities[number.eisy_local_variables_boost_mode_initial_value-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 2147483648.0,
      'min': -2147483648.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.eisy_local_variables_boost_mode_initial_value',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Boost Mode Initial Value',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Boost Mode Initial Value',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_1.10_init',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[number.eisy_local_variables_boost_mode_initial_value-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'eisy.local Variables Boost Mode Initial Value',
      'last_edited': None,
      'max': 2147483648.0,
      'min': -2147483648.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.eisy_local_variables_boost_mode_initial_value',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_number_entities[number.fanlinc_lamp_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 1.0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.fanlinc_lamp_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'On Level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On Level',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_EE EE EE 1_OL',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number_entities[number.fanlinc_lamp_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'FanLinc Lamp On Level',
      'max': 100.0,
      'min': 1.0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.fanlinc_lamp_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_number_entities[number.hallway_light_on_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max': 100.0,
      'min': 1.0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.hallway_light_on_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'On Level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'On Level',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_AA AA AA 1_OL',
    'unit_of_measurement': '%',
  })
# ---
# name: test_number_entities[number.hallway_light_on_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hallway Light On Level',
      'max': 100.0,
      'min': 1.0,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.hallway_light_on_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
